--- a/src/common/stylus/base.styl
+++ b/src/common/stylus/base.styl
@@ -3,6 +3,16 @@ body,html
     font-weight: 200
     font-size: 12px
     font-family: 'PingFang SC','STHeitiSC-Light','Helvetica-Light',arial,'sams-serif'
+.clearfix
+    display: inline-block
+    &：after
+        display: block
+        content: '.'
+        height: 0
+        line-height: 0
+        clear: both
+        visibility: hidden
+
 @media (-webkit-min-device-pixel-ratio: 2), (min-device-pixel-ratio: 2)
     .border-1px
         &::after
